feat: add swagger in user controller
